--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,8 +28,12 @@ jobs:
       - name: Get last commit
         id: get-commit-msg
         run: |
+          # Get commit message and escape potential special characters
           commit_msg=$(git log --pretty=%B -n 1 --skip 1 2>/dev/null)
-          echo "commit-msg=$commit_msg" >> $GITHUB_OUTPUT
+          # Use proper delimiter for multiline strings in GitHub Actions
+          echo "commit-msg<<EOF" >> $GITHUB_OUTPUT
+          echo "$commit_msg" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Install dependencies
         run: python -m pip install requests yq
