Conda recipe update

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -13,8 +13,8 @@ requirements:
   - wheel
   run:
   - pandas
-  - qiime2 {{ qiime2_epoch }}.*
-  - q2-types {{ qiime2_epoch }}.*
+  - qiime2 {{ qiime2 }}
+  - q2-types {{ q2_types }}
   build:
   - python {{ python }}
   - setuptools
