--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Test
+name: CI
 on:
   pull_request:
     branches: ["main"]
@@ -10,9 +10,4 @@ jobs:
     uses: bokulich-lab/utilities/.github/workflows/ci.yaml@main
     with:
       distro: tiny
-
-  qiime-ci:
-    uses: qiime2/distributions/.github/workflows/lib-ci-dev.yaml@dev
-    with:
-      distro: tiny
-      recipe-path: 'conda-recipe'
+      build_docker: true
