--- a/.github/workflows/upload-coverage.yaml
+++ b/.github/workflows/upload-coverage.yaml
@@ -2,7 +2,7 @@ name: Upload coverage report
 
 on:
   workflow_run:
-    workflows: ["Test"]
+    workflows: ["CI"]
     types:
       - completed
 
