--- a/.github/workflows/study-count-badge.yaml
+++ b/.github/workflows/study-count-badge.yaml
@@ -79,9 +79,11 @@ jobs:
         fi
     
     - name: Commit and push changes
+      env:
+        GH_TOKEN: ${{ secrets.BOT_GITHUB_TOKEN }}
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config --local user.email "bokulich-lab@ethz.ch"
+        git config --local user.name "BOTulich"
         
         # Add both files to git
         git add README.md study-count-history.csv
