--- a/.github/workflows/study-count-badge.yaml
+++ b/.github/workflows/study-count-badge.yaml
@@ -23,7 +23,7 @@ jobs:
         tar -xzf edirect.tar.gz
         sudo mv edirect /opt/
         echo "/opt/edirect" >> $GITHUB_PATH
-        nquire -dwn ftp.ncbi.nlm.nih.gov entrez/entrezdirect xtract.Linux.gz
+        /opt/edirect/nquire -dwn ftp.ncbi.nlm.nih.gov entrez/entrezdirect xtract.Linux.gz
         gunzip -f xtract.Linux.gz
         chmod +x xtract.Linux
         sudo mv xtract.Linux /opt/edirect
