--- a/.github/workflows/study-count-badge.yaml
+++ b/.github/workflows/study-count-badge.yaml
@@ -9,8 +9,6 @@ on:
 jobs:
   update-study-count:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     
     steps:
     - name: Checkout repository
@@ -18,27 +16,28 @@ jobs:
     
     - name: Install EDirect tools
       run: |
-        # Install EDirect tools for esearch/efetch/xtract
+        # Install EDirect tools for esearch/efetch/xtract/transmute
         wget -O edirect.tar.gz "ftp://ftp.ncbi.nlm.nih.gov/entrez/entrezdirect/edirect.tar.gz"
         tar -xzf edirect.tar.gz
-        sudo mv edirect /opt/
-        echo "/opt/edirect" >> $GITHUB_PATH
+        mv edirect $HOME/
 
         wget -O xtract.gz "ftp://ftp.ncbi.nlm.nih.gov/entrez/entrezdirect/xtract.Linux.gz"
         gunzip -f xtract.gz
         chmod +x xtract
-        sudo mv xtract /opt/edirect
+        mv xtract $HOME/edirect
         
         wget -O transmute.gz "ftp://ftp.ncbi.nlm.nih.gov/entrez/entrezdirect/transmute.Linux.gz"
         gunzip -f transmute.gz
         chmod +x transmute
-        sudo mv transmute /opt/edirect
+        mv transmute $HOME/edirect
+        
+        echo "$HOME/edirect" >> $GITHUB_PATH
 
     - name: Verify EDirect commands are available
       run: |
         set -euo pipefail
         echo "PATH: $PATH"
-        for cmd in esearch efetch xtract; do
+        for cmd in esearch efetch xtract transmute; do
           printf "Checking %s... " "$cmd"
           if ! command -v "$cmd" >/dev/null 2>&1; then
             echo "NOT FOUND" >&2
@@ -81,7 +80,46 @@ jobs:
         echo "$STUDY_IDS" >> $GITHUB_OUTPUT
         echo "EOF" >> $GITHUB_OUTPUT
 
+    - name: Determine if counts changed
+      id: diff
+      run: |
+        set -euo pipefail
+        NEW_STUDY="${{ steps.count.outputs.study-count }}"
+        NEW_SAMPLE="${{ steps.count.outputs.sample-count }}"
+        
+        if [ ! -f "study-count-history.csv" ] || [ ! -s "study-count-history.csv" ]; then
+          echo "No history CSV found; will create and commit new counts."
+          echo "changed=true" >> $GITHUB_OUTPUT
+          exit 0
+        fi
+        
+        LAST_LINE=$(tail -n 1 study-count-history.csv)
+        # If the last line is the header or malformed, treat as changed
+        if echo "$LAST_LINE" | grep -q '^date,study-count,sample-count$'; then
+          echo "Last CSV line is header; treating as changed."
+          echo "changed=true" >> $GITHUB_OUTPUT
+          exit 0
+        fi
+        
+        LAST_STUDY=$(echo "$LAST_LINE" | awk -F, 'NF>=2 {print $2}')
+        LAST_SAMPLE=$(echo "$LAST_LINE" | awk -F, 'NF>=3 {print $3}')
+        
+        if [ -z "$LAST_STUDY" ] || [ -z "$LAST_SAMPLE" ]; then
+          echo "Last CSV line missing counts; treating as changed."
+          echo "changed=true" >> $GITHUB_OUTPUT
+          exit 0
+        fi
+        
+        if [ "$NEW_STUDY" != "$LAST_STUDY" ] || [ "$NEW_SAMPLE" != "$LAST_SAMPLE" ]; then
+          echo "Counts changed: studies $LAST_STUDY -> $NEW_STUDY, samples $LAST_SAMPLE -> $NEW_SAMPLE"
+          echo "changed=true" >> $GITHUB_OUTPUT
+        else
+          echo "Counts unchanged (studies=$NEW_STUDY, samples=$NEW_SAMPLE)."
+          echo "changed=false" >> $GITHUB_OUTPUT
+        fi
+
     - name: Update CSV tracking file
+      if: steps.diff.outputs.changed == 'true'
       run: |
         # Current study count and date
         STUDY_COUNT="${{ steps.count.outputs.study-count }}"
@@ -97,6 +135,7 @@ jobs:
         echo "${CURRENT_DATE},${STUDY_COUNT},${SAMPLE_COUNT}" >> study-count-history.csv
 
     - name: Update README badge
+      if: steps.diff.outputs.changed == 'true'
       run: |
         # Current study count
         STUDY_COUNT="${{ steps.count.outputs.study-count }}"
@@ -119,6 +158,7 @@ jobs:
         fi
 
     - name: Commit and push changes
+      if: steps.diff.outputs.changed == 'true'
       env:
         GH_TOKEN: ${{ secrets.BOT_GITHUB_TOKEN }}
       run: |
@@ -134,6 +174,6 @@ jobs:
         if git diff --cached --quiet; then
           echo "No changes to commit"
         else
-          git commit -m "Update ENA studies count to ${{ steps.count.outputs.count }} and add historical data"
+          git commit -m "Update ENA counts: studies=${{ steps.count.outputs.study-count }}, samples=${{ steps.count.outputs.sample-count }}"
           git push
         fi
