--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,8 +1,8 @@
-name: MyST GitHub Pages Deploy
+name: Deploy Docs
 on:
   push:
     # Runs on pushes targeting the default branch
-    branches: [readme_update]
+    branches: [docs]
 env:
   BASE_URL: /${{ github.event.repository.name }}
 
@@ -20,10 +20,9 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@v5
+      - uses: actions/configure-pages@v5
+      - uses: actions/setup-node@v6
         with:
           node-version: 18.x
       - name: Install MyST Markdown
@@ -32,7 +31,7 @@ jobs:
         working-directory: ./docs
         run: myst build --html
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v4
         with:
           path: 'docs/_build/html'
       - name: Deploy to GitHub Pages
