CI: build Docker on release

--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -8,142 +8,5 @@ on:
 
 jobs:
   push-docker-images:
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    steps:
-      - name: Download build metadata
-        uses: actions/github-script@v7
-        with:
-          script: |
-            // Get artifacts from the triggering workflow run
-            const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              run_id: context.payload.workflow_run.id,
-            });
-
-            // Find build metadata artifact
-            const metadataArtifact = artifacts.data.artifacts.find(
-              artifact => artifact.name === 'build-metadata'
-            );
-
-            if (!metadataArtifact) {
-              console.log('No build metadata found, skipping Docker push');
-              return;
-            }
-
-            // Download the metadata
-            const download = await github.rest.actions.downloadArtifact({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              artifact_id: metadataArtifact.id,
-              archive_format: 'zip',
-            });
-
-            const fs = require('fs');
-            fs.writeFileSync('metadata.zip', Buffer.from(download.data));
-
-      - name: Extract and parse metadata
-        id: metadata
-        run: |
-          if [ -f "metadata.zip" ]; then
-            unzip metadata.zip
-            if [ -f "build-metadata.json" ]; then
-              # Parse JSON and set outputs
-              echo "repository=$(jq -r '.repository' build-metadata.json)" >> $GITHUB_OUTPUT
-              echo "sha=$(jq -r '.sha' build-metadata.json)" >> $GITHUB_OUTPUT
-              echo "short-sha=$(jq -r '.short_sha' build-metadata.json)" >> $GITHUB_OUTPUT
-              echo "epoch=$(jq -r '.epoch' build-metadata.json)" >> $GITHUB_OUTPUT
-              echo "ref=$(jq -r '.ref' build-metadata.json)" >> $GITHUB_OUTPUT
-              echo "event-name=$(jq -r '.event_name' build-metadata.json)" >> $GITHUB_OUTPUT
-              echo "pr-number=$(jq -r '.pr_number' build-metadata.json)" >> $GITHUB_OUTPUT
-              echo "tag-name=$(jq -r '.tag_name' build-metadata.json)" >> $GITHUB_OUTPUT
-              echo "is-tag-push=$(jq -r '.is_tag_push' build-metadata.json)" >> $GITHUB_OUTPUT
-              echo "build-pr-image=$(jq -r '.build_pr_image' build-metadata.json)" >> $GITHUB_OUTPUT
-              echo "is-main-push=$(jq -r '.is_main_push' build-metadata.json)" >> $GITHUB_OUTPUT
-              echo "has-metadata=true" >> $GITHUB_OUTPUT
-              
-              # Display metadata for debugging
-              echo "Build metadata:"
-              cat build-metadata.json | jq .
-            else
-              echo "has-metadata=false" >> $GITHUB_OUTPUT
-            fi
-          else
-            echo "has-metadata=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Set up Docker Buildx
-        if: steps.metadata.outputs.has-metadata == 'true'
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to the remote registry
-        if: steps.metadata.outputs.has-metadata == 'true'
-        uses: docker/login-action@v3
-        with:
-          registry: quay.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Download test image artifact
-        if: steps.metadata.outputs.has-metadata == 'true' && steps.metadata.outputs.build-pr-image == 'true'
-        uses: actions/download-artifact@v4
-        with:
-          name: test-docker-image
-          path: .
-          run-id: ${{ github.event.workflow_run.id }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Load and push test image
-        if: steps.metadata.outputs.has-metadata == 'true' && steps.metadata.outputs.build-pr-image == 'true'
-        run: |
-          if [ -f "test-image.tar.gz" ]; then
-            # Load the image
-            docker load < test-image.tar.gz
-          
-            # Determine the tag based on event type
-            if [ "${{ steps.metadata.outputs.event-name }}" = "pull_request" ]; then
-              TAG="quay.io/bokulichlab/${{ steps.metadata.outputs.repository }}:pr-${{ steps.metadata.outputs.pr-number }}-${{ steps.metadata.outputs.short-sha }}"
-            else
-              TAG="quay.io/bokulichlab/${{ steps.metadata.outputs.repository }}:test-${{ steps.metadata.outputs.short-sha }}"
-            fi
-          
-            # Re-tag and push
-            docker tag ${{ steps.metadata.outputs.sha }} "$TAG"
-            docker push "$TAG"
-            echo "Pushed test image: $TAG"
-          else
-            echo "No test image artifact found"
-          fi
-
-      - name: Download production image artifact
-        if: steps.metadata.outputs.has-metadata == 'true' && steps.metadata.outputs.is-main-push == 'true'
-        uses: actions/download-artifact@v4
-        with:
-          name: prod-docker-image
-          path: .
-          run-id: ${{ github.event.workflow_run.id }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Load and push production image
-        if: steps.metadata.outputs.has-metadata == 'true' && steps.metadata.outputs.is-main-push == 'true'
-        run: |
-          if [ -f "prod-image.tar" ]; then
-            # Load the image
-            docker load < prod-image.tar
-          
-            # Determine the tag based on whether this is a tag push or main branch push
-            if [ "${{ steps.metadata.outputs.is-tag-push }}" = "true" ]; then
-              # For tag pushes, use just the tag name (no hash suffix)
-              TAG="quay.io/bokulichlab/${{ steps.metadata.outputs.repository }}:${{ steps.metadata.outputs.tag-name }}"
-            else
-              # For main branch pushes, use epoch + hash
-              TAG="quay.io/bokulichlab/${{ steps.metadata.outputs.repository }}:${{ steps.metadata.outputs.epoch }}-${{ steps.metadata.outputs.short-sha }}"
-            fi
-          
-            docker tag temp-prod-image "$TAG"
-            docker push "$TAG"
-            echo "Pushed production image: $TAG"
-          else
-            echo "No production image artifact found"
-          fi
+    uses: bokulich-lab/utilities/.github/workflows/docker-push.yaml@main
+    secrets: inherit
